out/production/learn-code/spring-app-hz/springdemo-gtwy-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: springdemo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springdemo-vs
spec:
  hosts:
    - "*"
  gateways:
    - springdemo-gateway
  http:
    - match:
        - uri:
            prefix: "/home/"
      route:
        - destination:
            port:
              number: 8080
            host: springdemo
